# nostrain

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: generate_data.py  headless.py  relay.py  run.sh  summary.py  worker.py
demo/gpt/: data.py  model.py  run.sh  summary.py  train.py  worker.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  RESOURCES.md  SPECIFICATION.md  VIRAL_TWEETS.md
rfcs/: ALL_RFCS.md
src/nostrain/: __init__.py  aggregation.py  cli.py  compression.py  crypto.py  model.py  protocol.py  pytorch.py  relay.py  retry.py  runtime.py  stateio.py  training.py
tests/: __init__.py  helpers.py  test_aggregation.py  test_cli.py  test_compression.py  test_crypto.py  test_model.py  test_protocol.py  test_pytorch.py  test_relay.py  test_stateio.py  test_training.py
tests/fake_torch/torch/: __init__.py
tests/fixtures/: current_state.json  current_state_peer.json  initial_state.json  linear_dataset_worker_a.json  linear_dataset_worker_b.json  linear_initial_state.json  mlp_dataset_worker_a.json  mlp_dataset_worker_b.json  mlp_initial_state.json
